styles and info added

--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -1,4 +1,4 @@
-<section class="p-8 min-h-screen h-auto">
+<section class="p-4 md:p-8 min-h-screen h-auto">
   <app-top-menu></app-top-menu>
   <router-outlet />
 </section>
