--- a/src/app/shared/components/table/table.html
+++ b/src/app/shared/components/table/table.html
@@ -40,7 +40,7 @@
           <div class="tooltip tooltip-right z-[1]" data-tip="Go to Details">
             <a
               [routerLink]="['/', paths.search, paths.code, country.code]"
-              class="btn btn-ghost btn-xs text-primary hover:text-primary/80"
+              class="btn btn-primary btn-xs text-white"
             >
               <span class="block md:hidden">Details</span>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
