--- a/src/app/shared/components/top-menu/top-menu.html
+++ b/src/app/shared/components/top-menu/top-menu.html
@@ -1,6 +1,7 @@
 <ul class="menu menu-horizontal bg-gray-800 rounded-box w-full">
+  @if (isSearchPage() && !isDetailsPage()) {
   <span class="self-center px-4">Search by:</span>
-  @if (isSearchPage() && !isDetailsPage()) { @for (route of routes; track route.key) {
+  @for (route of routes; track route.key) {
   <li class="mr-2">
     <a
       [routerLink]="[route.path]"
